[tool.poetry]
name = "neo4j-transfer"
version = "0.1.0"
description = ""
authors = ["jalakoo <jalakoo@gmail.com>"]
readme = "README.md"
packages = [{include = "neo4j_transfer"}]


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
neo4j-uploader = {path = "/Users/jasonkoo/neo4j/repos/neo4j-uploader", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
